<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_car"
            android:title="@string/menu_nav_home" />
        <item
            android:id="@+id/nav_replacements"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_nav_replacements" />
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_documents"
            android:title="@string/menu_nav_dokumenty" />
    </group>

    <item android:title="@string/share">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_nav_share" />
        </menu>
    </item>

</menu>
