<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/single_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/part_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_menu_manage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/part_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/new_part" />

    <TextView
        android:id="@+id/additional_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textSize="16sp"
        android:text="@string/additional_info" />

    <TextView
        android:id="@+id/part_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/replacement_date"/>

    <TextView
        android:id="@+id/part_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/part_price"/>

    </LinearLayout>

</LinearLayout>