<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/choose_car_textview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textAllCaps="true"
            android:text="@string/wybierz_auto"/>

        <Spinner
            android:id="@+id/choose_car_spinner_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:popupElevation="0dp"
            android:spinnerMode="dropdown"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <TextView android:id="@+id/dialog_new_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:lineSpacingExtra="8sp"
        android:text="@string/nowa_czesc"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/dialog_new_part_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:inputType="textCapSentences|textMultiLine|textCapCharacters"
        android:lines="2"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView android:id="@+id/dialog_additional_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:lineSpacingExtra="8sp"
        android:text="@string/additional_info_txt"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/dialog_additional_info_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="2"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView android:id="@+id/dialog_replacement_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:lineSpacingExtra="8sp"
        android:text="@string/data_wymiany"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/dialog_replacement_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="np. 28.07.2019"
        android:digits="0,1,2,3,4,5,6,7,8,9,/,."
        android:inputType="textMultiLine|phone"
        android:lines="2"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="12sp"
        tools:ignore="TextFields" />

    <TextView android:id="@+id/dialog_part_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:lineSpacingExtra="8sp"
        android:text="@string/cena_czesci"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/dialog_part_price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/part_price_hint"
        android:digits="0,1,2,3,4,5,6,7,8,9,."
        android:inputType="textMultiLine|phone"
        android:lines="2"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="12sp" />

    </LinearLayout>
</ScrollView>